--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URL = 'mongodb+srv://admin:admin123@cluster0.b8nk7ss.mongodb.net/?retryWrites=true&w=majority'
+MONGO_URL = 'mongodb+srv://admin:admin@cluster0.b8nk7ss.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET = 'superhardstringtoguess'
 PORT = 3001
